# RDV

./: CMakeLists.txt  README.md  data.hpp  matrix.cpp  matrix.h  model.cpp  model.h  rdv.cpp
resultats/: african_head_texture_anaglyphe.ppm  anaglyphe_final.ppm  diablo_texture.ppm  diablo_texture_anaglyphe.ppm  lignes.ppm  linearisation_triangle.ppm  nuage_de_points.ppm  triangles.ppm  triangles_pleins.ppm
